# isi_test_task

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
isi_test_task/: dump.json  manage.py
isi_test_task/chat/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
isi_test_task/isi_test_task/: asgi.py  settings.py  urls.py  wsgi.py
