[tool.poetry]
name = "isi_test_task"
version = "0.1.0"
description = ""
authors = ["ahzees <matviy.stets@gmail.com>"]
readme = "README.md"
packages = [{include = "isi_test_task"}]

[tool.poetry.dependencies]
python = "^3.8"



[tool.poetry.group.dev.dependencies]
djangorestframework-simplejwt = "^5.2.2"
django-dotenv = "^1.4.2"
django = "^4.2"
djangorestframework = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
