[tool.poetry]
name = "isi_test_task"
version = "0.1.0"
description = ""
authors = ["ahzees <matviy.stets@gmail.com>"]
readme = "README.md"
packages = [{include = "isi_test_task"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
djangorestframework-simplejwt = "^5.2.2"
django-dotenv = "^1.4.2"
django = "^4.2"
djangorestframework = "^3.14.0"
pre-commit = "^3.2.2"
mypy = "^1.2.0"
isort = "^5.12.0"
commitizen = "^2.42.1"
black = "^23.3.0"

[tool.isort]
profile = 'black'

# [tool.mypy]
# plugins = ["mypy_django_plugin.main"]
# ignore_missing_imports = true
# disallow_untyped_defs = true
# check_untyped_defs = true
# disallow_incomplete_defs = true
# disallow_any_generics = true
# warn_redundant_casts = true
# warn_unused_ignores = true
# warn_unreachable = true

# [tool.django-stubs]
# django_settings_module = "isi_test_task.isi_test_task.settings"

[tool.commitizen]
name = "cz_customize"
version = "0.1.0"
tag_format = "v$version"
update_changelog_on_bump = true
version_files = [
    "isi_test_task/__init__.py:version",
    "pyproject.toml:^version"
]

[tool.commitizen.customize]
message_template = "{{change_type}}:{% if show_message %} {{message}}{% endif %}"
example = "feature: this feature enable customize through config file"
schema = "<type>: <body>"
bump_pattern = "^(major|minor|patch|hotfix)"
bump_map = {"major" = "MAJOR", "minor" = "MINOR", "patch" = "PATCH", "hotfix" = "PATCH"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
