[tool.poetry]
name = "isi_test_task"
version = "0.1.0"
description = ""
authors = ["ahzees <matviy.stets@gmail.com>"]
readme = "README.md"
packages = [{include = "isi_test_task"}]

[tool.poetry.dependencies]
python = "^3.8.10"
djangorestframework-simplejwt = "^5.2.2"
django-dotenv = "^1.4.2"
django = "^4.2"
djangorestframework = "^3.14.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
mypy = "^1.2.0"
isort = "^5.12.0"
commitizen = "^2.42.1"
django-stubs = "^1.16.0"
flakehell = "^0.9.0"
flake8 = "3.9.0"
django-debug-toolbar = "^4.0.0"

[tool.isort]
profile = 'black'

[tool.flakehell]
format = "colored"
max_line_length = 88

[tool.commitizen]
name = "cz_customize"
version = "0.1.0"
tag_format = "v$version"
update_changelog_on_bump = true
version_files = [
    "isi_test_task/__init__.py:version",
    "pyproject.toml:^version"
]

[tool.commitizen.customize]
message_template = "{{change_type}}:{% if show_message %} {{message}}{% endif %}"
example = "feature: this feature enable customize through config file"
schema = "<type>: <body>"
bump_pattern = "^(major|minor|patch|hotfix)"
bump_map = {"major" = "MAJOR", "minor" = "MINOR", "patch" = "PATCH", "hotfix" = "PATCH"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
